[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Interact/Door.gd" type="Script" id=1]
[ext_resource path="res://GFX/Piso.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Arrow.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 149.943, 40.5305 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 151.939, 34.4784 )

[node name="Door" type="StaticBody2D"]
rotation = 1.5708
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnterDetect" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterDetect"]
position = Vector2( -0.525581, -49.0095 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="EnterDetect"]
position = Vector2( 0.000404358, 112.939 )

[node name="Arrow" parent="EnterDetect" instance=ExtResource( 3 )]
position = Vector2( -1.61432, -214.183 )
rotation = -3.14159

[node name="ExitDetect" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDetect"]
position = Vector2( 0.000167847, 46.086 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="ExitDetect"]
position = Vector2( -2.94083, -126.17 )

[node name="ExitArrow" parent="ExitDetect" instance=ExtResource( 3 )]
position = Vector2( -2.80524, 224.694 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="EnterDetect" to="." method="_on_EnterDetect_body_entered"]
[connection signal="body_exited" from="EnterDetect" to="." method="_on_EnterDetect_body_exited"]
[connection signal="body_entered" from="ExitDetect" to="." method="_on_ExitDetect_body_entered"]
[connection signal="body_exited" from="ExitDetect" to="." method="_on_ExitDetect_body_exited"]
